fidoconfig 0.7
--------------

Sun Apr 11 17:00
Antonio:
+ '-a' option added to fconf2golded. Export areas only.
+ fidoconfig now supports descriptions for fileareas.
+ update tparser.

----- cvs ci ------
Sat Apr  10 22:25:12
Max:
removed $f from unpack code
	
----- cvs ci ------
Tue Apr  6 18:23:17 CEST 1999	
Antonio: (applied by mtt)
+ Fidoconfig and hpt now supports descriptions for areas. See docs for
  more info and examples. fconf2golded supports too.
+ fconf2golded export localareas too. dupe and bad areas are local type now.
+ fidoconfig supports filenames with one or more spaces on it. Should be
  between double quotes.
+ fidoconfig and hpt supports create and read filenames of areas in dos
  style (8+3). Useful when you use Linux and want to store your message base
  on a DOS partition.
+ Modifications in tparser.


----- cvs ci ------
Mon Mar  29 16:02
Fedor:
+ token "ReportTo" added to s_fidoconfig for report to echoarea or netmail

----- cvs ci ------
Thu Mar  18 22:21
Max:
+ carbons to echoarea (not only to localarea)

----- cvs ci ------
Wed Mar  17 20:50
Max:
+ changed -m <integer> to -$m <integer> in echoarea options
- -m changed to -mn (mandatory to link in echoarea options)

----- cvs ci ------
Mon Mar  15 20:50
Max:
+ win32 port by Edgar Chupit (chupit@mail.lv)
+ logEchoToScreen
+ update tparser
	
----- cvs ci ------
Wed Mar  10 15:37
Max:
+ "availableareas" changed to "forwardRequestFile"
+ "areafixKillReports"
+ update proposal
+ update tparser
	
----- cvs ci ------
Mon Mar  8 21:42
Max:
- fixed a bug when found unknown link in echoarea

Mon, Mar 1 22:00
  Gabriel Plutzar
+ included new keywords & features needed by Husky Tick:
  * FileAreaBaseDir <directory>                                
    Where the directories for all File areas shall be made at autocreate  
    Same as MsgBaseDir                                                    
  * AutoFileCreateDefaults <string>                                       