@@ -1,3 +1,4 @@
+- understand msg like squish and ignore it
 - route statements which are defined in the middle of several link statements
   are broken, because there is a realloc of config->links! Maybe there are
   more bugs like this in the current sources
